--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/celstyle.css">
+    <link rel="stylesheet" href="style/cel2style.css">
     <title>Tec Laguna</title>
 </head>
 <body>
